--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "autoprefixer": "10.4.14",
     "bootstrap": "^5.2.3",
+    "mdb-react-ui-kit": "^6.0.0",
     "next": "13.3.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
