--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
     "react-multi-carousel": "^2.8.3",
+    "react-progressbar-on-scroll": "^2.0.0",
     "react-responsive-carousel": "^3.2.23",
     "tailwindcss": "3.3.1"
   }
