--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "mdb-react-ui-kit": "^6.0.0",
     "next": "13.3.0",
     "postcss": "8.4.23",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
     "react-multi-carousel": "^2.8.3",
+    "react-progressbar-on-scroll": "^2.0.0",
     "react-responsive-carousel": "^3.2.23",
     "tailwindcss": "3.3.1"
   }
