--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-multi-carousel": "^2.8.3",
     "react-progressbar-on-scroll": "^2.0.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-ui-cards": "^3.1.0",
     "tailwindcss": "3.3.1"
   }
 }
