--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "autoprefixer": "10.4.14",
     "bootstrap": "^5.2.3",
+    "firebase": "^9.21.0",
     "mdb-react-ui-kit": "^6.0.0",
     "next": "13.3.0",
     "postcss": "8.4.23",
@@ -21,6 +22,7 @@
     "react-progressbar-on-scroll": "^2.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-ui-cards": "^3.1.0",
-    "tailwindcss": "3.3.1"
+    "tailwindcss": "3.3.1",
+    "uuid": "^9.0.0"
   }
 }
