--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "firebase": "^9.21.0",
     "mdb-react-ui-kit": "^6.0.0",
+    "net": "^1.0.2",
     "next": "13.3.0",
     "postcss": "8.4.23",
     "react": "^18.2.0",
@@ -22,7 +28,9 @@
     "react-progressbar-on-scroll": "^2.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-ui-cards": "^3.1.0",
+    "styled-components": "^5.3.11",
     "tailwindcss": "3.3.1",
+    "universal-cookie": "^4.0.4",
     "uuid": "^9.0.0"
   }
 }
