--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
     "react-multi-carousel": "^2.8.3",
+    "react-phone-input-2": "^2.15.1",
     "react-progressbar-on-scroll": "^2.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-ui-cards": "^3.1.0",
