--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-progressbar-on-scroll": "^2.0.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-toastify": "^9.1.3",
     "react-ui-cards": "^3.1.0",
     "styled-components": "^5.3.11",
     "tailwindcss": "3.3.1",
