--- a/package.json
+++ b/package.json
@@ -13,17 +13,21 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@nextui-org/react": "^1.0.0-beta.13",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
+    "eslint-config-next": "^13.4.12",
     "firebase": "^9.21.0",
     "mdb-react-ui-kit": "^6.0.0",
     "net": "^1.0.2",
-    "next": "13.3.0",
+    "next": "^13.4.12",
     "postcss": "8.4.23",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
+    "react-drag-drop-files": "^2.3.10",
+    "react-icons": "^4.10.1",
     "react-multi-carousel": "^2.8.3",
     "react-phone-input-2": "^2.15.1",
     "react-progressbar-on-scroll": "^2.0.0",
