--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mdb-react-ui-kit": "^6.0.0",
     "net": "^1.0.2",
     "next": "^13.4.12",
+    "next-video": "^0.15.0",
     "postcss": "8.4.23",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
@@ -38,5 +39,9 @@
     "tailwindcss": "3.3.1",
     "universal-cookie": "^4.0.4",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4"
   }
 }
