--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "shaukeen",
-  "version": "0.1.0",
+  "name": "Kir.ai",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,16 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@alan-ai/alan-sdk-web": "^1.8.54",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@gsap/react": "^2.1.1",
     "@nextui-org/react": "^1.0.0-beta.13",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "eslint-config-next": "^13.4.12",
     "firebase": "^9.21.0",
+    "fontfaceobserver": "^2.3.0",
+    "framer-motion": "^11.5.4",
     "mdb-react-ui-kit": "^6.0.0",
     "net": "^1.0.2",
     "next": "^13.4.12",
@@ -26,13 +30,13 @@
     "postcss": "8.4.23",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
-    "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.10",
     "react-icons": "^4.10.1",
     "react-multi-carousel": "^2.8.3",
     "react-phone-input-2": "^2.15.1",
     "react-progressbar-on-scroll": "^2.0.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.23.0",
     "react-toastify": "^9.1.3",
     "react-ui-cards": "^3.1.0",
     "styled-components": "^5.3.11",
